Edge Slide additional options (error in idprops commit) #88030

Closed
opened 2021-05-04 18:46:39 +02:00 by Eugene Du · 14 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.51

Blender Version
Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-05-03 20:45, hash: 874c70d088
Worked: 2.92.0

Caused by 0d9f79b163

Short description of error
Edge Slide got some additional options in "Adjust last operation" seems doesn't change anything. Redundant or new unrealized feature?

Exact steps for others to reproduce the error

  1. Start Blender 2.93.0 beta.
  2. Enter Edit mode for Cube.
  3. Select edge.
  4. Hit G, move it.
  5. Hit G+G, slide it.
  6. Open "Adjust last operation" window and see options.

Edge Slide tool (separate tool, icon in T panel), have no this options.
2.93.0_beta_Edge_Slide_issue.png

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.51 **Blender Version** Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-05-03 20:45, hash: `874c70d088` Worked: 2.92.0 Caused by 0d9f79b163 **Short description of error** Edge Slide got some additional options in "Adjust last operation" seems doesn't change anything. Redundant or new unrealized feature? **Exact steps for others to reproduce the error** 1. Start Blender 2.93.0 beta. 2. Enter Edit mode for Cube. 3. Select edge. 4. Hit G, move it. 5. Hit G+G, slide it. 6. Open "Adjust last operation" window and see options. Edge Slide tool (separate tool, icon in T panel), have no this options. ![2.93.0_beta_Edge_Slide_issue.png](https://archive.blender.org/developer/F10053411/2.93.0_beta_Edge_Slide_issue.png)
Author

Added subscriber: @APEC

Added subscriber: @APEC
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

these properties are not defined yet in function TRANSFORM_OT_edge_slide and I can not see it in Blender version 3.0.0 alpha, hash: 8e0995d0062.

these properties are not defined yet in function `TRANSFORM_OT_edge_slide` and I can not see it in Blender version 3.0.0 alpha, hash: `8e0995d0062`.
Author

how to reproduce:

  1. Start Blender 2.93.0 beta.
  2. Enter Edit mode for Cube.
  3. Select edge.
  4. Hit G, move it.
  5. Hit G+G, slide it.
  6. Open "Adjust last operation" window and see options.

Edge Slide tool (separate tool, icon in T panel), have no this options.

how to reproduce: 1. Start Blender 2.93.0 beta. 2. Enter Edit mode for Cube. 3. Select edge. 4. Hit G, move it. 5. Hit G+G, slide it. 6. Open "Adjust last operation" window and see options. Edge Slide tool (separate tool, icon in T panel), have no this options.
Member

May be I am missing something but I can not see these option there
prog.PNG

May be I am missing something but I can not see these option there ![prog.PNG](https://archive.blender.org/developer/F10055071/prog.PNG)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm

I can confirm
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Caused by 0d9f79b163

@HooglyBoogly: could you check this, please? (not sure how bad the consequences could be in that part of the code...)
Adding Core here since it touches idprops.

Caused by 0d9f79b163 @HooglyBoogly: could you check this, please? (not sure how bad the consequences could be in that part of the code...) Adding `Core` here since it touches idprops.
Philipp Oeser changed title from Edge Slide additional options? to Edge Slide additional options (error in idprops commit) 2021-05-05 18:31:20 +02:00
Philipp Oeser self-assigned this 2021-05-05 18:34:54 +02:00
Member

Ah, got it

Ah, got it

This issue was referenced by 98a1540627

This issue was referenced by 98a1540627f3c36f17c0064babe605faa2152246
Member

Excuse if this is overly-alarmed, just setting this to High priority because I think it might affect operators in unexpected ways...

Excuse if this is overly-alarmed, just setting this to High priority because I think it might affect operators in unexpected ways...
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88030
No description provided.